--- a/src/client/styles/components/_BlogsWrapper.scss
+++ b/src/client/styles/components/_BlogsWrapper.scss
@@ -15,6 +15,13 @@
     padding: 0;
   }
 
+  @include layout-at(9, $portrait) {
+    .content {
+      margin-top: -65px;
+      padding-top: 65px;
+    }
+  }
+
   @include layout-at(9, $landscape) {
 
     .content {
@@ -55,6 +62,7 @@
     .content {
       max-width: 1312px;
       margin: auto;
+      margin-top: -65px;
       float: none;
       width: auto;
 
